--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,5 +1,4 @@
-# TODO service -> test the output lists and new methods
-# TODO output: pre-compile regexp for the endpoint
+# TODO service -> test the output lists and new methods, fix the tests
 # TODO should the urls be defined in the service layer rather than the output?
 # TODO remove the source layer?
 # TODO performance analysis
