Debugging and refactoring the tests since a98aa0ce96f57c0a698a02f9f89fcea7c25a44c4

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,4 +1,4 @@
-# TODO service -> test the output lists and new methods, fix the tests
+# TODO service -> test the output lists and new methods
 # TODO should the urls be defined in the service layer rather than the output?
 # TODO remove the source layer?
 # TODO performance analysis
