--- a/examples/zip-codes-tokyo/config.yaml
+++ b/examples/zip-codes-tokyo/config.yaml
@@ -118,7 +118,8 @@ outputs:
       input: zipCodesTokyo
       endpoint: "/zip-codes/{zipCode}"
       parameters:
-        - column: zipCode
+        zipCode:
+          column: zipCode
           parser: string
           index: zipCode
       relationships:
