--- a/examples/zip-codes-tokyo/config.yaml
+++ b/examples/zip-codes-tokyo/config.yaml
@@ -88,7 +88,6 @@ outputs:
   - jsonArray:
       name: listPostalCodes
       input: zipCodesTokyo
-      endpoint: "/zip-codes"
       limit:
         default: 100
         max: 1000
@@ -116,7 +115,6 @@ outputs:
   - jsonObject:
       name: findOnePostalCode
       input: zipCodesTokyo
-      endpoint: "/zip-codes/{zipCode}"
       parameters:
         zipCode:
           column: zipCode
@@ -141,5 +139,7 @@ services:
       listen: ":80"
       errorsType: application/json
       routes:
-        - output: listPostalCodes
-        - output: findOnePostalCode
+        - path: "/zip-codes"
+          output: listPostalCodes
+        - path: "/zip-codes/{zipCode}"
+          output: findOnePostalCode
