--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,3 +1,5 @@
+# TODO test the xml record (with all type cases)
+# TODO the root element selector may not be enough?
 # TODO add an example configuration for the xml input
 # TODO allow indexing and searching everything if no columns list?
 # TODO performance analysis
@@ -50,7 +52,7 @@ inputs:
           xpath: "/id"
         - name: name
           parser: defaultString
-          xpath: "/name"
+          xpath: "string(//name)"
         - name: number
           parser: defaultFloat
           xpath: "/number"
