Adding tests for the xml input

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,4 +1,4 @@
-# TODO test the xml input
+# TODO execute and fix the xml input tests
 # TODO add an example configuration for the xml input
 # TODO allow indexing and searching everything if no columns list?
 # TODO add an X-Powered-By header
