--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,4 +1,4 @@
-# TODO csv + xml integration test to check that the position returned by IterateAll works with Get
+# TODO replace unsafe funcs by embedding bufio readers?
 # TODO test the new util/bufio.go functions
 # TODO add an example configuration for the xml input
 # TODO allow indexing and searching everything if no columns list?
