--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,6 +1,8 @@
+# TODO use xpath in the root streamer
+# TODO zip codes example: have a separate docker file
 # TODO add an example configuration for the xml input
-# TODO allow indexing and searching everything if no columns list?
-# TODO add an X-Powered-By header
+# TODO allow indexing and searching everything if no columns list in the index?
+# TODO add an X-Powered-By header (after buying domain and choosing name)
 # TODO performance analysis
 parsers:
   - integer:
