--- a/examples/zip-codes-tokyo/config.yaml
+++ b/examples/zip-codes-tokyo/config.yaml
@@ -12,7 +12,7 @@ parsers:
 inputs:
   - csv:
       name: zipCodesTokyo
-      path: /examples/zip-codes-tokyo/zip-codes.csv
+      path: ./zip-codes.csv
       dieOnInputChange: true
       ignoreFirstRow: false
       delimiter: ","
@@ -49,7 +49,7 @@ inputs:
           parser: integer
   - csv:
       name: updatedValues
-      path: /examples/zip-codes-tokyo/updated-values.csv
+      path: ./updated-values.csv
       dieOnInputChange: true
       ignoreFirstRow: false
       delimiter: ","
@@ -60,7 +60,7 @@ inputs:
           parser: string
   - csv:
       name: reasonsForUpdate
-      path: /examples/zip-codes-tokyo/reasons-for-updated.csv
+      path: ./reasons-for-updated.csv
       dieOnInputChange: true
       ignoreFirstRow: false
       delimiter: ","
