--- a/examples/japanese-dictionary/config.yaml
+++ b/examples/japanese-dictionary/config.yaml
@@ -2,7 +2,7 @@ inputs:
   - xml:
       name: dictionary
       path: ./JMdict.xml
-      elementNodeName: entry
+      recordXpath: "//entry"
       columns:
         - name: writing
           parser: string
