Revert using xmlquery to stream the xml records
This reverts commit 39dd931c5c40682d6aacbe078623d074c95e0e62.
This reverts commit 4bea268d7b1bf6b9bb00b69511f85f59a15a8bfc.

--- a/examples/japanese-dictionary/config.yaml
+++ b/examples/japanese-dictionary/config.yaml
@@ -2,7 +2,7 @@ inputs:
   - xml:
       name: dictionary
       path: ./JMdict.xml
-      recordXpath: "//entry"
+      elementNodeName: entry
       columns:
         - name: writing
           parser: string
