--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -44,7 +44,7 @@ inputs:
       name: defaultInput3
       path: ./dummy.xml
       dieOnInputChange: true
-      recordXpath: "//item"
+      elementNodeName: item
       columns:
         - name: id
           parser: defaultInteger
