Revert "Revert using xmlquery to stream the xml records"
This reverts commit 7174fc29484381a534abbee52a4f3fed4043ed2b.

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -44,7 +44,7 @@ inputs:
       name: defaultInput3
       path: ./dummy.xml
       dieOnInputChange: true
-      elementNodeName: item
+      recordXpath: "//item"
       columns:
         - name: id
           parser: defaultInteger
