Implementing a split parser

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -15,6 +15,10 @@ parsers:
       convertFromCharset: ""
   - json:
       name: defaultJson
+  - split:
+      name: defaultSplit
+      delimiter: "/"
+      parser: integer
 inputs:
   - csv:
       name: defaultInput
