Code to create the memory partial index

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -98,6 +98,11 @@ indexes:
       properties:
         - id
         - name
+  - memoryPartial:
+      name: defaultIndex
+      input: defaultInput
+      properties:
+        - name
 outputs:
   - graphql:
       name: defaultGraphqlOutput
