Fixing some errors and adding memory index to an example

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -99,7 +99,7 @@ indexes:
         - id
         - name
   - memoryPartial:
-      name: defaultIndex
+      name: defaultIndexPartial
       input: defaultInput
       properties:
         - name
