Partial index config to ignore case

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -101,6 +101,7 @@ indexes:
   - memoryPartial:
       name: defaultIndexPartial
       input: defaultInput
+      ignoreCase: true
       properties:
         - name
 outputs:
